src/test/scala/unit_tests/invalid_syntax/invalid_oper_usage.wacc
# invalid operator usage

begin
  int[] arr = [5,6,7] + 8
end